Round Trip Form updates, main added to all pages
Round Trip Form JS updates:  fixed broken updateInputWidth function, added ifs to handle initials in names, added courseInputs currently set to 6 max, added field validation, and added required button inputs.

HTML: added main to all pages, added buttons to introduction_form.html

--- a/web215/styles/default.css
+++ b/web215/styles/default.css
@@ -242,7 +242,7 @@ form {
 input {
     padding: 0;
     font-size: .8em;
-    box-sizing: border-box;
+    box-sizing: content-box;
 }
 
 #pictureContainer img {
@@ -266,6 +266,12 @@ input {
 
 #resetButton {
     margin-bottom: 1em;
+}
+
+.extraButtons {
+    width: 20em;
+    display: flex;
+    justify-content: space-between;
 }
 
 /*----End Introduction Form Styles----*/
