--- a/web250/components/header.html
+++ b/web250/components/header.html
@@ -1,12 +1,13 @@
 <header>
-    <h1><a href="index.html"><img src="images/icon1.svg" id="iconLogo"></a>Gina W's Grim Wyvern | WEB250
+    <h1><a href="index.html"><img src="images/icon.svg" id="iconLogo"></a>Gina W's Grim Wyvern | WEB250
     </h1>
-    <p>Tagline goes here...</p>
+    <p id="tagline">The Wyvern’s Hoard: A Shop of Wonders and Enchanted Curiosities</p>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="introduction.html">Introduction</a></li>
             <li><a href="contract.html">Contract</a></li>
+            <li><a href="brand.html">Brand</a></li>
         </ul>
     </nav>
 </header>
