--- a/web250/styles/default.css
+++ b/web250/styles/default.css
@@ -1,3 +1,72 @@
+/*----Base Styles----*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+.container,
+header,
+footer {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 20px;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0em 6.25em;
+    color: #321b2a;
+    background-color: #bcd5af;
+    letter-spacing: 0.05em;
+    font-size: 1.05em;
+}
+
+h2,
+p {
+    margin-bottom: 1em;
+}
+
+a,
+a:visited {
+    color: #38940a;
+    text-decoration-color: #1C390D;
+    text-underline-offset: .2em;
+}
+
+a:hover {
+    color: #764382;
+    text-shadow: 0 0 .3em #ba86e6;
+}
+
+/*----End of Base Styles----*/
+
+/*----Header/Nav Styles----*/
+header>nav>ul {
+    display: flex;
+    justify-content: space-between;
+    padding: .5em;
+    list-style-type: none;
+    font-size: 1.1em;
+    padding-bottom: 1em;
+
+}
+
+#iconLogo {
+    vertical-align: middle;
+    margin-top: 1%;
+    margin-right: 7.3%;
+}
+
+/*----End of Header/Nav Styles----*/
+/*----Tagline Styles----*/
 #tagline {
     font-style: italic;
+    margin-left: 20.3%;
+    margin-bottom: .3em;
 }
