--- a/web250/styles/default.css
+++ b/web250/styles/default.css
@@ -13,7 +13,7 @@ body {
 .container,
 header,
 footer {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 0 20px;
     box-sizing: border-box;
@@ -27,9 +27,17 @@ body {
     font-size: 1.05em;
 }
 
+main {
+    font-family: Georgia;
+}
+
 h2,
 p {
     margin-bottom: 1em;
+}
+
+h1 {
+    font-family: Garamond;
 }
 
 h2 {
@@ -40,6 +48,10 @@ h2 {
         -1.5px -1.5px 0 #000,
         1.5px -1.5px 0 #000,
         -1.5px 1.5px 0 #000;
+}
+
+p {
+    line-height: 130%;
 }
 
 hr {
@@ -68,6 +80,10 @@ a:hover {
     text-shadow: 0 0 .3em #ba86e6;
 }
 
+.lightText {
+    color: #bcd5af;
+}
+
 /*----End of Base Styles----*/
 
 /*----Header/Footer Nav Styles----*/
@@ -83,7 +99,8 @@ footer>nav {
 #iconLogo {
     vertical-align: middle;
     margin-top: 1%;
-    margin-right: 7.3%;
+    margin-left: 13.5%;
+    margin-right: 1%;
 }
 
 footer {
@@ -95,7 +112,8 @@ footer {
 /*----Tagline Styles----*/
 #tagline {
     font-style: italic;
-    margin-left: 20.3%;
+    margin-top: -1%;
+    margin-left: 23.3%;
     margin-bottom: 1%;
 }
 
@@ -112,3 +130,54 @@ ul li ul li {
 }
 
 /*----End of Introduction Styles----*/
+
+/*----Brand Styles----*/
+#brandColors {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#brandColors li {
+    width: 9em;
+    height: 9em;
+    margin: 0.55em;
+    border-radius: 50%;
+    text-align: center;
+    border: #321b2a solid .2em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#brandColors li:nth-child(1) {
+    background-color: #bcd5af;
+}
+
+#brandColors li:nth-child(2) {
+    background-color: #38940a;
+}
+
+#brandColors li:nth-child(3) {
+    background-color: #764382;
+}
+
+#brandColors li:nth-child(4) {
+    background-color: #321b2a;
+}
+
+/*----Brand Fonts----*/
+#garamond p,
+#garamond h4 {
+    font-family: garamond;
+    font-size: 1.15em;
+}
+
+#georgia p,
+#georgia h4 {
+    font-family: 'Junge';
+    font-size: 1.05em;
+}
+
+/*----End Brand Styles----*/
