--- a/web250/styles/default.css
+++ b/web250/styles/default.css
@@ -13,7 +13,7 @@ body {
 .container,
 header,
 footer {
-    max-width: 1000px;
+    max-width: 90%;
     margin: 0 auto;
     padding: 0 20px;
     box-sizing: border-box;
@@ -25,10 +25,7 @@ body {
     background-color: #bcd5af;
     letter-spacing: 0.05em;
     font-size: 1.05em;
-}
-
-main {
-    font-family: Georgia;
+    font-family: georgia;
 }
 
 h2,
@@ -37,7 +34,9 @@ p {
 }
 
 h1 {
+    margin-top: .9%;
     font-family: Garamond;
+    text-align: center;
 }
 
 h2 {
@@ -90,6 +89,7 @@ a:hover {
 header>nav>ul,
 footer>nav {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: .5em;
     list-style-type: none;
@@ -98,9 +98,6 @@ footer>nav {
 
 #iconLogo {
     vertical-align: middle;
-    margin-top: 1%;
-    margin-left: 13.5%;
-    margin-right: 1%;
 }
 
 footer {
@@ -112,9 +109,7 @@ footer {
 /*----Tagline Styles----*/
 #tagline {
     font-style: italic;
-    margin-top: -1%;
-    margin-left: 23.3%;
-    margin-bottom: 1%;
+    text-align: center;
 }
 
 /*----End of Tagline Styles----*/
@@ -176,7 +171,6 @@ ul li ul li {
 
 #georgia p,
 #georgia h4 {
-    font-family: 'georgia';
     font-size: 1.05em;
 }
 
