--- a/web250/styles/default.css
+++ b/web250/styles/default.css
@@ -1,5 +1,5 @@
 /*----Base Styles----*/
-* {
+html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -29,11 +29,6 @@ body {
     font-family: georgia;
 }
 
-h2,
-p {
-    margin-bottom: 1em;
-}
-
 h1 {
     margin-top: .9%;
     font-family: Garamond;
@@ -42,24 +37,28 @@ h1 {
 
 h2 {
     color: #bcd5af;
+    margin-bottom: 1em;
     text-align: center;
     text-shadow:
         1.5px 1.5px 0 #000,
         -1.5px -1.5px 0 #000,
         1.5px -1.5px 0 #000,
         -1.5px 1.5px 0 #000;
+    border: .07em #321b2a solid;
+    border-radius: 5em;
+    background-image: url('/web250/images/side.png');
+    background-position: 180%;
+    background-size: cover;
 }
 
 p {
     line-height: 130%;
+    margin-bottom: 1em;
 }
 
 hr {
+    box-sizing: border-box;
     height: 1em;
-}
-
-h2,
-hr {
     border: .07em #321b2a solid;
     border-radius: 5em;
     background-image: url('/web250/images/side.png');
@@ -80,7 +79,7 @@ a:hover {
     text-shadow: 0 0 .3em #ba86e6;
 }
 
-.lightText {
+.light-text {
     color: #bcd5af;
 }
 
@@ -129,14 +128,15 @@ ul li ul li {
 /*----End of Introduction Styles----*/
 
 /*----Brand Styles----*/
-#brandColors {
+#brand-colors {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-#brandColors li {
+#brand-colors li {
+    box-sizing: border-box;
     width: 9em;
     height: 9em;
     margin: 0.55em;
@@ -148,31 +148,29 @@ ul li ul li {
     justify-content: center;
 }
 
-#brandColors li:nth-child(1) {
+#brand-colors li:nth-child(1) {
     background-color: #bcd5af;
 }
 
-#brandColors li:nth-child(2) {
+#brand-colors li:nth-child(2) {
     background-color: #38940a;
 }
 
-#brandColors li:nth-child(3) {
+#brand-colors li:nth-child(3) {
     background-color: #764382;
 }
 
-#brandColors li:nth-child(4) {
+#brand-colors li:nth-child(4) {
     background-color: #321b2a;
 }
 
 /*----Brand Fonts----*/
-#garamond p,
-#garamond h4 {
+#garamond {
     font-family: garamond;
     font-size: 1.15em;
 }
 
-#georgia p,
-#georgia h4 {
+#georgia {
     font-size: 1.05em;
 }
 
