Updates for introduction.html
Updates for introduction.html
- Course names reformatted (example:
web-250 is now WEB250)
- Updated reasons for taking courses
- G & H in GitHub now capitalized
- Removed extra A in Codecademy
- Updated JSFiddle link
- In background in this subject: Removed dashes in course names (example:
web-250 is now WEB250)
- Added professional background

--- a/web250/styles/default.css
+++ b/web250/styles/default.css
@@ -46,7 +46,7 @@ h2 {
         -1.5px 1.5px 0 #000;
     border: .07em #321b2a solid;
     border-radius: 5em;
-    background-image: url('/web250/images/side.png');
+    background-image: url('../images/side.png');
     background-position: 180%;
     background-size: cover;
 }
@@ -61,7 +61,7 @@ hr {
     height: 1em;
     border: .07em #321b2a solid;
     border-radius: 5em;
-    background-image: url('/web250/images/side.png');
+    background-image: url('../images/side.png');
     background-position: 180%;
     background-size: cover;
 }
