--- a/web250/components/header.html
+++ b/web250/components/header.html
@@ -4,7 +4,7 @@
     <p id="tagline">The Wyvern’s Hoard: A Shop of Wonders and Enchanted Curiosities</p>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="old_index.html">Home</a></li>
             <li><a href="introduction.html">Introduction</a></li>
             <li><a href="contract.html">Contract</a></li>
             <li><a href="brand.html">Brand</a></li>
