Re - added PHP code from InfinityFree pages
Re - added PHP code from InfinityFree pages, removed unneeded comment from old_index.html

--- a/web250/styles/default.css
+++ b/web250/styles/default.css
@@ -107,7 +107,7 @@ footer {
 /*----End of Header/Nav Styles----*/
 
 /*----Tagline Styles----*/
-#tagline {
+.tag_line {
     font-style: italic;
     text-align: center;
 }
