--- a/web250/components/header.html
+++ b/web250/components/header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1><a href="index.html"><img src="images/icon.svg" id="iconLogo"></a>Gina W's Grim Wyvern | WEB250
+    <h1><a href="old_index.html"><img src="images/icon.svg" id="iconLogo"></a>Gina W's Grim Wyvern | WEB250
     </h1>
     <p id="tagline">The Wyvern’s Hoard: A Shop of Wonders and Enchanted Curiosities</p>
     <nav>
