--- a/web250/styles/default.css
+++ b/web250/styles/default.css
@@ -7,11 +7,11 @@ html {
 
 html,
 body {
-    scrollbar-color: #764382 #bcd5af;
+    scrollbar-color: #764382 #DEF2D4;
     scrollbar-width: thin;
 }
 
-.container,
+main,
 header,
 footer {
     max-width: 90%;
@@ -23,7 +23,7 @@ footer {
 body {
     margin: 0em 6.25em;
     color: #321b2a;
-    background-color: #bcd5af;
+    background-color: #DEF2D4;
     letter-spacing: 0.05em;
     font-size: 1.05em;
     font-family: georgia;
@@ -33,10 +33,11 @@ h1 {
     margin-top: .9%;
     font-family: Garamond;
     text-align: center;
+    margin-right: 2%;
 }
 
 h2 {
-    color: #bcd5af;
+    color: #DEF2D4;
     margin-bottom: 1em;
     text-align: center;
     text-shadow:
@@ -51,7 +52,8 @@ h2 {
     background-size: cover;
 }
 
-p {
+p,
+main li {
     line-height: 130%;
     margin-bottom: 1em;
 }
@@ -68,9 +70,11 @@ hr {
 
 a,
 a:visited {
-    color: #38940a;
+    color: #1C5502;
     text-decoration-color: #1C390D;
     text-underline-offset: .2em;
+    text-shadow:
+        0 0 1.3px rgb(85, 255, 0);
     font-size: 1.15em;
 }
 
@@ -80,7 +84,7 @@ a:hover {
 }
 
 .light-text {
-    color: #bcd5af;
+    color: #DEF2D4;
 }
 
 /*----End of Base Styles----*/
@@ -98,6 +102,7 @@ footer>nav {
 
 #iconLogo {
     vertical-align: middle;
+    padding-right: 1%;
 }
 
 footer {
@@ -108,6 +113,7 @@ footer {
 
 /*----Tagline Styles----*/
 #tagline {
+    margin-top: -1%;
     font-style: italic;
     text-align: center;
 }
@@ -121,8 +127,7 @@ figure {
 }
 
 ul li ul li {
-    margin-left: 5%;
-    margin-bottom: 1%;
+    margin: 1% 0% 1% 2%;
 }
 
 /*----End of Introduction Styles----*/
@@ -149,11 +154,11 @@ ul li ul li {
 }
 
 #brand-colors li:nth-child(1) {
-    background-color: #bcd5af;
+    background-color: #DEF2D4;
 }
 
 #brand-colors li:nth-child(2) {
-    background-color: #38940a;
+    background-color: #1C5502;
 }
 
 #brand-colors li:nth-child(3) {
