--- a/web250/components/header.html
+++ b/web250/components/header.html
@@ -1,13 +1,24 @@
 <header>
-    <h1><a href="index.html"><img src="images/icon.svg" id="iconlogo" alt="iconLogo"></a>Gina W's Grim Wyvern | WEB250
-    </h1>
-    <p id="tagline">The Wyvern’s Hoard: A Shop of Wonders and Enchanted Curiosities</p>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="introduction.html">Introduction</a></li>
-            <li><a href="contract.html">Contract</a></li>
-            <li><a href="brand.html">Brand</a></li>
-        </ul>
-    </nav>
+  <h1>
+    <a href="index.html"
+      ><img src="images/icon.svg" id="iconlogo" alt="iconLogo" /></a
+    >Gina W's Grim Wyvern
+  </h1>
+  <p id="tagline">
+    The Wyvern’s Hoard: A Shop of Wonders and Enchanted Curiosities
+  </p>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="introduction.html">Introduction</a></li>
+      <li><a href="contract.html">Contract</a></li>
+      <li><a href="brand.html">Brand</a></li>
+      <li><a href="http://gwhitle.free.nf/" target="_blank">PHP Pages</a></li>
+      <li>
+        <a href="http://gwhitle.free.nf/joy-of-php/" target="_blank"
+          >Joy of PHP</a
+        >
+      </li>
+    </ul>
+  </nav>
 </header>
