--- a/web250/styles/default.css
+++ b/web250/styles/default.css
@@ -15,8 +15,8 @@ main,
 header,
 footer {
     max-width: 90%;
-    margin: 0 auto;
-    padding: 0 20px;
+    margin: 2em auto;
+    padding: 0 2em;
     box-sizing: border-box;
 }
 
@@ -30,21 +30,21 @@ body {
 }
 
 h1 {
-    margin-top: .9%;
+    margin-top: -2%;
     font-family: Garamond;
     text-align: center;
-    margin-right: 2%;
 }
 
 h2 {
     color: #DEF2D4;
+    height: 1.3em;
     margin-bottom: 1em;
     text-align: center;
     text-shadow:
-        1.5px 1.5px 0 #000,
-        -1.5px -1.5px 0 #000,
-        1.5px -1.5px 0 #000,
-        -1.5px 1.5px 0 #000;
+        2.5px 2.5px 4px #000,
+        -2.5px -2.5px 4px #000,
+        2.5px -2.5px 4px #000,
+        -2.5px 2.5px 4px #000;
     border: .07em #321b2a solid;
     border-radius: 5em;
     background-image: url('../images/side.png');
@@ -60,7 +60,7 @@ main li {
 
 hr {
     box-sizing: border-box;
-    height: 1em;
+    height: 1.7em;
     border: .07em #321b2a solid;
     border-radius: 5em;
     background-image: url('../images/side.png');
@@ -94,10 +94,9 @@ header>nav>ul,
 footer>nav {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    padding: .5em;
+    justify-content: space-evenly;
+    padding: 0em 0em;
     list-style-type: none;
-    padding-bottom: 1em;
 }
 
 #iconlogo {
@@ -113,7 +112,7 @@ footer {
 
 /*----Tagline Styles----*/
 #tagline {
-    margin-top: -1%;
+    margin-top: -1em;
     font-style: italic;
     text-align: center;
 }
