--- a/web250/styles/default.css
+++ b/web250/styles/default.css
@@ -1,181 +1,181 @@
 /*----Base Styles----*/
 html {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html,
 body {
-    scrollbar-color: #764382 #DEF2D4;
-    scrollbar-width: thin;
+  scrollbar-color: #764382 #def2d4;
+  scrollbar-width: thin;
 }
 
 main,
 header,
 footer {
-    max-width: 90%;
-    margin: 2em auto;
-    padding: 0 2em;
-    box-sizing: border-box;
+  max-width: 90%;
+  margin: 2em auto;
+  padding: 0 2em;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0em 6.25em;
-    color: #321b2a;
-    background-color: #DEF2D4;
-    letter-spacing: 0.05em;
-    font-size: 1.05em;
-    font-family: georgia;
+  margin: 0em 6.25em;
+  color: #321b2a;
+  background-color: #def2d4;
+  letter-spacing: 0.05em;
+  font-size: 1.05em;
+  font-family: georgia;
 }
 
 h1 {
-    margin-top: -2%;
-    font-family: Garamond;
-    text-align: center;
+  margin-top: -2%;
+  font-family: Garamond;
+  text-align: center;
 }
 
 h2 {
-    color: #DEF2D4;
-    height: 1.3em;
-    margin-bottom: 1em;
-    text-align: center;
-    text-shadow:
-        2.5px 2.5px 4px #000,
-        -2.5px -2.5px 4px #000,
-        2.5px -2.5px 4px #000,
-        -2.5px 2.5px 4px #000;
-    border: .07em #321b2a solid;
-    border-radius: 5em;
-    background-image: url('../images/side.png');
-    background-position: 180%;
-    background-size: cover;
+  color: #def2d4;
+  height: 1.3em;
+  margin-top: -0.5em;
+  margin-bottom: 1em;
+  text-align: center;
+  text-shadow: 2.5px 2.5px 4px #000, -2.5px -2.5px 4px #000,
+    2.5px -2.5px 4px #000, -2.5px 2.5px 4px #000;
+  border: 0.07em #321b2a solid;
+  border-radius: 5em;
+  background-image: url("../images/side.png");
+  background-position: 180%;
+  background-size: cover;
 }
 
 p,
 main li {
-    line-height: 130%;
-    margin-bottom: 1em;
+  line-height: 130%;
+  margin-bottom: 1em;
 }
 
 hr {
-    box-sizing: border-box;
-    height: 1.7em;
-    border: .07em #321b2a solid;
-    border-radius: 5em;
-    background-image: url('../images/side.png');
-    background-position: 180%;
-    background-size: cover;
+  box-sizing: border-box;
+  height: 1.7em;
+  border: 0.07em #321b2a solid;
+  border-radius: 5em;
+  background-image: url("../images/side.png");
+  background-position: 180%;
+  background-size: cover;
 }
 
 a,
 a:visited {
-    color: #1C5502;
-    text-decoration-color: #1C390D;
-    text-underline-offset: .2em;
-    text-shadow:
-        0 0 1.3px rgb(85, 255, 0);
-    font-size: 1.15em;
+  color: #1c5502;
+  text-decoration: none;
+  text-underline-offset: 0.2em;
+  text-shadow: 0 0 1.3px rgb(85, 255, 0);
+  font-size: 1.15em;
 }
 
 a:hover {
-    color: #764382;
-    text-shadow: 0 0 .3em #ba86e6;
+  color: #764382;
+  text-shadow: 0 0 0.3em #ba86e6;
 }
 
 .light-text {
-    color: #DEF2D4;
+  color: #def2d4;
 }
 
 /*----End of Base Styles----*/
 
 /*----Header/Footer Nav Styles----*/
-header>nav>ul,
-footer>nav {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding: 0em 0em;
-    list-style-type: none;
+ul {
+  margin: 0em 0em;
+}
+header > nav > ul,
+footer > nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 0em 0em;
+  list-style-type: none;
 }
 
 #iconlogo {
-    vertical-align: middle;
-    padding-right: 1%;
+  vertical-align: middle;
+  padding-right: 1%;
 }
 
 footer {
-    text-align: center;
+  text-align: center;
 }
 
 /*----End of Header/Nav Styles----*/
 
 /*----Tagline Styles----*/
 #tagline {
-    margin-top: -1em;
-    font-style: italic;
-    text-align: center;
+  margin-top: -1em;
+  font-style: italic;
+  text-align: center;
 }
 
 /*----End of Tagline Styles----*/
 
 /*----Introduction Styles----*/
 figure {
-    float: right;
-    margin-left: 2%;
+  float: right;
+  margin-left: 2%;
 }
 
 ul li ul li {
-    margin: 1% 0% 1% 2%;
+  margin: 1% 0% 1% 2%;
 }
 
 /*----End of Introduction Styles----*/
 
 /*----Brand Styles----*/
 #brand-colors {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 #brand-colors li {
-    box-sizing: border-box;
-    width: 9em;
-    height: 9em;
-    margin: 0.55em;
-    border-radius: 50%;
-    text-align: center;
-    border: #321b2a solid .2em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  box-sizing: border-box;
+  width: 9em;
+  height: 9em;
+  margin: 0.55em;
+  border-radius: 50%;
+  text-align: center;
+  border: #321b2a solid 0.2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #brand-colors li:nth-child(1) {
-    background-color: #DEF2D4;
+  background-color: #def2d4;
 }
 
 #brand-colors li:nth-child(2) {
-    background-color: #1C5502;
+  background-color: #1c5502;
 }
 
 #brand-colors li:nth-child(3) {
-    background-color: #764382;
+  background-color: #764382;
 }
 
 #brand-colors li:nth-child(4) {
-    background-color: #321b2a;
+  background-color: #321b2a;
 }
 
 /*----Brand Fonts----*/
 #garamond {
-    font-family: garamond;
-    font-size: 1.15em;
+  font-family: garamond;
+  font-size: 1.15em;
 }
 
 #georgia {
-    font-size: 1.05em;
+  font-size: 1.05em;
 }
 
 /*----End Brand Styles----*/
