Minor CSS Footer Adjustment:
- Adjusted footer spacing to match h2's

--- a/web250/styles/default.css
+++ b/web250/styles/default.css
@@ -106,6 +106,8 @@ footer > nav {
 
 footer {
   text-align: center;
+  margin-top: -0.5em;
+  margin-bottom: 1em;
 }
 
 /*----End of Header/Nav Styles----*/
