--- a/web250/styles/default.css
+++ b/web250/styles/default.css
@@ -43,6 +43,7 @@ h2 {
   text-align: center;
   text-shadow: 2.5px 2.5px 4px #000, -2.5px -2.5px 4px #000,
     2.5px -2.5px 4px #000, -2.5px 2.5px 4px #000;
+  box-sizing: border-box;
   border: 0.07em #321b2a solid;
   border-radius: 5em;
   background-image: url("../images/side.png");
