--- a/web250/components/footer.html
+++ b/web250/components/footer.html
@@ -1,14 +1,16 @@
 <footer>
-    <nav>
-        <a href="https://github.com/gwhitle">GitHub</a>
-        <a href="https://gwhitle.github.io/">GitHub.io</a>
-        <a href="https://gwhitle.github.io/web250/index.html">WEB250.io</a>
-        <a href="https://www.freecodecamp.org/gwhitle">freeCodeCamp</a>
-        <a href="https://www.codecademy.com/profiles/gwhitle">Codecademy</a>
-        <a href="https://jsfiddle.net/u/gwhitle/fiddles/">JSFiddle</a>
-        <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
+  <nav>
+    <a href="https://github.com/gwhitle">GitHub</a>
+    <a href="https://gwhitle.github.io/">GitHub.io</a>
+    <a href="https://gwhitle.github.io/web250/index.html">WEB250.io</a>
+    <a href="https://www.freecodecamp.org/gwhitle">freeCodeCamp</a>
+    <a href="https://www.codecademy.com/profiles/gwhitle">Codecademy</a>
+    <a href="https://jsfiddle.net/u/gwhitle/fiddles/">JSFiddle</a>
+    <a href="https://www.linkedin.com/in/g-whitley-46863828a/">LinkedIn</a>
 
-        <script src="scripts/linkValidation.js"></script>
-    </nav>
-    <p>Page Designed by WhitsGits</p>
+    <script src="scripts/linkValidation.js"></script>
+  </nav>
+  <p>
+    Page Designed by <a href="businesscard.html" target="_blank">Whitley Inc.</a>
+  </p>
 </footer>
