--- a/web250/components/header.html
+++ b/web250/components/header.html
@@ -19,6 +19,7 @@
           >Joy of PHP</a
         >
       </li>
+      <li><a href="fizzbuzzbang.html">FizzBuzzBang</a></li>
     </ul>
   </nav>
 </header>
