--- a/web250/components/header.html
+++ b/web250/components/header.html
@@ -20,6 +20,7 @@
         >
       </li>
       <li><a href="fizzbuzzbang.html">FizzBuzzBang</a></li>
+      <li><a href="introductionform.html">Introduction Form</a></li>
     </ul>
   </nav>
 </header>
